fixed spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -46,7 +46,7 @@ box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
 .navbar-inverse .navbar-nav > li > a {
   font-family: Bebas;
   color: #398a31;
-  font-size: 22px;
+  font-size: 20px;
   margin-top: 0;
 }
 .nav-links{
